Cleaned up components and imports

--- a/src/components/blog/GridItem.astro
+++ b/src/components/blog/GridItem.astro
@@ -1,6 +1,6 @@
 ---
 import { Picture } from '@astrojs/image/components';
-import blurHashImage from '../../utils/blur';
+import blurHashImage from '~/utils/blur';
 
 import { BLOG } from '~/config.mjs';
 import type { Post } from '~/types';
