--- a/src/components/blog/PostImage.astro
+++ b/src/components/blog/PostImage.astro
@@ -1,6 +1,6 @@
 ---
 import { Picture } from "@astrojs/image/components";
-import blurHashImage from '../../utils/blur';
+import blurHashImage from '~/utils/blur';
 const {src, aspectRatio = '16:9', alt} = Astro.props;
 
 ---
