--- a/src/components/blog/ListItem.astro
+++ b/src/components/blog/ListItem.astro
@@ -9,7 +9,7 @@ import type { Post } from '~/types';
 import { getPermalink } from '~/utils/permalinks';
 import { findImage } from '~/utils/images';
 import { getFormattedDate } from '~/utils/utils';
-import blurHashImage from '../../utils/blur'
+import blurHashImage from '~/utils/blur'
 
 export interface Props {
   post: Post;
