--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,20 +1,8 @@
 ---
 import { SITE } from '~/config.mjs';
 import Layout from '~/layouts/PageLayout.astro';
-import TimeLineElement from "../components/cv/TimelineWork.astro";
 import { Icon } from 'astro-icon';
-
-import Hero from '~/components/widgets/Hero.astro';
-import Note from '~/components/widgets/Note.astro';
-import Features from '~/components/widgets/Features.astro';
-import Features2 from '~/components/widgets/Features2.astro';
-import Steps from '~/components/widgets/Steps.astro';
-import Content from '~/components/widgets/Content.astro';
-import LatestPosts from '~/components/blog/LatestPosts.astro';
-import FAQs from '~/components/widgets/FAQs.astro';
-import Stats from '~/components/widgets/Stats.astro';
-import CallToAction from '~/components/widgets/CallToAction.astro';
-import Contact from "../components/widgets/Contact.astro";
+import Contact from "~/components/widgets/Contact.astro";
 
 const meta = {
   title: 'Contact',
