--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -1,7 +1,7 @@
 ---
 import { SITE } from '~/config.mjs';
 import Layout from '~/layouts/PageLayout.astro';
-import AboutMe from "../components/cv_new/AboutMe.astro";
+import AboutMe from "~/components/resume/AboutMe.astro";
 
 const meta = {
   title: 'Resume',
