--- a/src/components/blog/ListItem.astro
+++ b/src/components/blog/ListItem.astro
@@ -27,7 +27,7 @@ const link = !BLOG?.post?.disabled ? getPermalink(post.permalink, 'post') : '';
       <a class="relative hover:scale-[1.05] active:scale-[1] transition duration-300" href={link ?? 'javascript:void(0)'}>
             <Picture
               src={image}
-              class="w-full h-full rounded-2xl shadow-xl bg-cover aspect-video"
+              class="w-full h-full rounded-2xl shadow-xl aspect-video"
               widths={[400, 900, 1400]}
               sizes="(max-width: 900px) 400px, (max-width: 1400px) 900px, 1400px"
               alt={post.title}
@@ -35,7 +35,7 @@ const link = !BLOG?.post?.disabled ? getPermalink(post.permalink, 'post') : '';
               format="webp"
               loading="lazy"
               decoding="async"
-              style={`background-image: url(${await blurHashImage(image.src)});`}
+              style={await blurHashImage(image.src)}
             />
       </a>
     )
