--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -94,14 +94,15 @@ const skillsList = [
   },
 ];
 
-const profileImage = import('../assets/images/profile.jpg');
 ---
 <Layout {meta} bg="bg-gray-100 dark:bg-slate-950">
   <AboutMe
     name = "Jonathan Falcon"
     title = "Fencer, songwriter, photographer, marketer"
-    profileImage = {profileImage}
-    profileAlt = "Jonathan Falcon smiling and not looking directly at camera. Backdrop is of Texas State University"
+    image={{
+      src: '/src/assets/images/profile.jpg',
+      alt: 'Jonathan Falcon smiling and not looking directly at camera. Backdrop is of Texas State University',
+    }}
     aboutText = "Curiosity drives me; consumer behavior excites me. I will help you understand who your customers are and why they do what they do, so you can better tailor your products/services to exceed expectations."
     education = {educationList}
     certifications = {certificationList}
