--- a/src/components/blog/SinglePost.astro
+++ b/src/components/blog/SinglePost.astro
@@ -20,10 +20,11 @@ export interface Props {
 const { post, url } = Astro.props;
 ---
 
-<article class="!py-20 md:!py-24 mx-auto">
-  <header class={post.image ? '' : ''}>
+<article class="!pb-20 md:!pb-24 !pt-0 mx-auto">
+  <header style={await blurHashImage(post.image.src)}>
+    <div class="bg-gradient-to-b from-white/60 to-white/100 dark:from-slate-900/70 dark:to-slate-900/100 from-20% to-80% backdrop-saturate-150 md:pt-24 pt-20">
     <div class="flex justify-between flex-col sm:flex-row max-w-4xl mx-auto mt-0 mb-2 px-4 sm:items-center">
-      <p class="text-gray-700 dark:text-gray-300">
+      <p class="text-gray-700 dark:text-slate-300 text-sm">
         <Icon name="mdi:calendar-month" class="w-4 h-4 inline-block -mt-0.5" />
         <time datetime={String(post.publishDate)}>{getFormattedDate(post.publishDate)}</time>
         {
@@ -73,6 +74,7 @@ const { post, url } = Astro.props;
         </div>
       )
     }
+    </div>
   </header>
   <div
     class={proseStyle}
@@ -92,4 +94,5 @@ const { post, url } = Astro.props;
     <PostTags tags={post.tags} class="mr-5" />
     <SocialShare url={url} text={post.title} class="mt-5 sm:mt-1 flex flex-row gap-1 items-center" />
   </div>
+  
 </article>
