Updated header to have extra padding until scroll style change to reduce sense of navbar being "crammed" up top

--- a/src/components/common/BasicScripts.astro
+++ b/src/components/common/BasicScripts.astro
@@ -63,8 +63,10 @@ import { SITE } from '~/config.mjs';
       const header = document.getElementById('header');
       if (lastKnownScrollPosition > 40 && !header.classList.contains('scroll')) {
         document.getElementById('header').classList.add('scroll');
+        document.getElementById('header').children[0].classList.remove('md:py-6');
       } else if (lastKnownScrollPosition <= 40 && header.classList.contains('scroll')) {
         document.getElementById('header').classList.remove('scroll');
+        document.getElementById('header').children[0].classList.add('md:py-6');
       }
       ticking = false;
     }
