--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -50,7 +50,7 @@ const hoverStyleAlt = "relative after:absolute after:bg-slate dark:after:bg-whit
   ]}
   id="header"
 >
-  <div class="py-2 px-3 md:px-4 mx-auto w-full md:flex md:justify-between max-w-7xl touch-manipulation">
+  <div class="md:py-6 transition-[padding] duration-300 py-2 px-3 md:px-4 mx-auto w-full md:flex md:justify-between max-w-7xl touch-manipulation">
     <div class:list={[{"mr-auto": position === "right"}, "flex justify-between"]}>
       <a class="flex items-center" href={getHomePermalink()}>
         <Logo />
