--- a/src/components/common/SocialShare.astro
+++ b/src/components/common/SocialShare.astro
@@ -32,31 +32,31 @@ const urlLink = {
   <a title="Share with Messages" aria-label="Share with Messages" href={urlLink.sms} target="_blank" rel="noopener">
     <Icon
     name="mdi:chat"
-    class="w-10 h-10 p-1.5 hover:text-primary-700 dark:hover:text-primary-400 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-slate-700 duration-200 transition rounded-lg hover:bg-gray-200 dark:hover:bg-slate-600"
+    class="w-10 h-10 p-1.5 hover:text-primary-700 dark:hover:text-primary-400 duration-200 transition rounded-lg hover:bg-gray-200 dark:hover:bg-slate-600"
     />
   </a>
   <a title="Share with Email" aria-label="Share with Email" href={urlLink.email} target="_blank" rel="noopener">
     <Icon
     name="mdi:email"
-    class="w-10 h-10 p-1.5 hover:text-primary-700 dark:hover:text-primary-400 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-slate-700 duration-200 transition rounded-lg hover:bg-gray-200 dark:hover:bg-slate-600"
+    class="w-10 h-10 p-1.5 hover:text-primary-700 dark:hover:text-primary-400 duration-200 transition rounded-lg hover:bg-gray-200 dark:hover:bg-slate-600"
     />
   </a>
   <a title="Share to LinkedIn" aria-label="Share to LinkedIn" href={urlLink.linkedin} target="_blank" rel="noopener">
     <Icon
     name="mdi:linkedin"
-    class="w-10 h-10 p-1.5 hover:text-primary-700 dark:hover:text-primary-400 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-slate-700 duration-200 transition rounded-lg hover:bg-gray-200 dark:hover:bg-slate-600"
+    class="w-10 h-10 p-1.5 hover:text-primary-700 dark:hover:text-primary-400 duration-200 transition rounded-lg hover:bg-gray-200 dark:hover:bg-slate-600"
     />
   </a>
   <a title="Share to Twitter" aria-label="Share to Twitter" href={urlLink.twitter} target="_blank" rel="noopener">
     <Icon
       name="mdi:twitter"
-      class="w-10 h-10 p-1.5 hover:text-primary-700 dark:hover:text-primary-400 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-slate-700 duration-200 transition rounded-lg hover:bg-gray-200 dark:hover:bg-slate-600"
+      class="w-10 h-10 p-1.5 hover:text-primary-700 dark:hover:text-primary-400 duration-200 transition rounded-lg hover:bg-gray-200 dark:hover:bg-slate-600"
     />
   </a>
   <a title="Share to Facebook" aria-label="Share to Facebook" href={urlLink.facebook} target="_blank" rel="noopener">
     <Icon
       name="mdi:facebook-box"
-      class="w-10 h-10 p-1.5 hover:text-primary-700 dark:hover:text-primary-400 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-slate-700 duration-200 transition rounded-lg hover:bg-gray-200 dark:hover:bg-slate-600"
+      class="w-10 h-10 p-1.5 hover:text-primary-700 dark:hover:text-primary-400 duration-200 transition rounded-lg hover:bg-gray-200 dark:hover:bg-slate-600"
     />
   </a>
 </div>
