--- a/src/components/common/ToggleTheme.astro
+++ b/src/components/common/ToggleTheme.astro
@@ -13,7 +13,7 @@ export interface Props {
 const {
   label = 'Toggle between Dark and Light mode',
   class:
-    className = 'text-slate dark:text-white hover:bg-slate/10 dark:hover:bg-white/20 transition duration-300 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg max-md:rounded-xl text-sm md:p-2.5 p-3.5 block items-center mx-auto max-md:mt-10',
+    className = 'text-slate dark:text-white hover:bg-slate/10 dark:hover:bg-white/20 transition duration-300 rounded-lg max-md:rounded-xl text-sm md:p-2.5 p-3.5 block items-center mx-auto max-md:mt-10',
   iconClass = 'w-6 h-6',
   iconName = 'ph:moon-fill',
 } = Astro.props;
