--- a/src/components/resume/AboutMe.astro
+++ b/src/components/resume/AboutMe.astro
@@ -32,22 +32,22 @@ const cardStyle = "bg-white dark:bg-slate-800 border border-transparent dark:bor
         <p class="text-xl font-semibold text-gray-600 dark:text-slate-300 leading-none">{title}</p>
         <ul class="flex justify-center xl:gap-x-2 gap-x-3 mt-2 sm:mt-5 md:mt-2 xl:mt-5">
           <li>
-            <a class="text-gray-600 hover:text-primary-700 dark:hover:text-primary-400 dark:text-slate-300 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-slate-700 inline-flex items-center duration-200 transition p-3 rounded-xl hover:bg-gray-200 dark:hover:bg-slate-600" aria-label="LinkedIn" href="https://www.linkedin.com/in/jqfalcon/" title="LinkedIn">
+            <a class="text-gray-600 hover:text-primary-700 dark:hover:text-primary-400 dark:text-slate-300 inline-flex items-center duration-200 transition p-3 rounded-xl hover:bg-gray-200 dark:hover:bg-slate-600" aria-label="LinkedIn" href="https://www.linkedin.com/in/jqfalcon/" title="LinkedIn">
               <Icon class="w-9 h-9" name="simple-icons:linkedin"/>
 
             </a>
           </li><li>
-          <a class="text-gray-600 hover:text-primary-700 dark:hover:text-primary-400 dark:text-slate-300 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-slate-700 inline-flex items-center duration-200 transition p-3 rounded-xl hover:bg-gray-200 dark:hover:bg-slate-600" aria-label="GitHub" href="https://github.com/jonathanfalcon" title="GitHub">
+          <a class="text-gray-600 hover:text-primary-700 dark:hover:text-primary-400 dark:text-slate-300 inline-flex items-center duration-200 transition p-3 rounded-xl hover:bg-gray-200 dark:hover:bg-slate-600" aria-label="GitHub" href="https://github.com/jonathanfalcon" title="GitHub">
             <Icon class="w-9 h-9" name="simple-icons:github"/>
 
           </a>
         </li><li>
-          <a class="text-gray-600 hover:text-primary-700 dark:hover:text-primary-400 dark:text-slate-300 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-slate-700 inline-flex items-center duration-200 transition p-3 rounded-xl hover:bg-gray-200 dark:hover:bg-slate-600" aria-label="Tableau Public" title="Tableau Public" href="https://public.tableau.com/app/profile/falcon">
+          <a class="text-gray-600 hover:text-primary-700 dark:hover:text-primary-400 dark:text-slate-300 inline-flex items-center duration-200 transition p-3 rounded-xl hover:bg-gray-200 dark:hover:bg-slate-600" aria-label="Tableau Public" title="Tableau Public" href="https://public.tableau.com/app/profile/falcon">
             <Icon class="w-9 h-9" name="simple-icons:tableau"/>
 
           </a>
         </li><li>
-          <a class="text-gray-600 hover:text-primary-700 dark:hover:text-primary-400 dark:text-slate-300 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-slate-700 inline-flex items-center duration-200 transition p-3 rounded-xl hover:bg-gray-200 dark:hover:bg-slate-600" aria-label="Unsplash" href="https://unsplash.com/@jonathanfalcon" title="Unsplash">
+          <a class="text-gray-600 hover:text-primary-700 dark:hover:text-primary-400 dark:text-slate-300 inline-flex items-center duration-200 transition p-3 rounded-xl hover:bg-gray-200 dark:hover:bg-slate-600" aria-label="Unsplash" href="https://unsplash.com/@jonathanfalcon" title="Unsplash">
             <Icon class="w-9 h-9" name="simple-icons:unsplash"/>
 
           </a>
