--- a/src/components/widgets/Contact.astro
+++ b/src/components/widgets/Contact.astro
@@ -40,25 +40,25 @@ const {
         }
         <ul class="lg:grid-cols-2 lg:grid place-items-center gap-14 flex justify-center md:mb-12 mb-6">
           <li>
-            <a class="text-gray-600 hover:text-primary-700 dark:hover:text-primary-400 dark:text-gray-300 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 inline-flex items-center duration-200 transition" aria-label="LinkedIn" title="LinkedIn" href="https://www.linkedin.com/in/jqfalcon/">
+            <a class="text-gray-600 hover:text-primary-700 dark:hover:text-primary-400 dark:text-gray-300 inline-flex items-center duration-200 transition" aria-label="LinkedIn" title="LinkedIn" href="https://www.linkedin.com/in/jqfalcon/">
               <Icon class="lg:w-20 lg:h-20 md:w-16 md:h-16 w-12 h-12" name="simple-icons:linkedin"/>
 
             </a>
           </li>
           <li>
-            <a class="text-gray-600 hover:text-primary-700 dark:hover:text-primary-400 dark:text-gray-300 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 inline-flex items-center duration-200 transition" aria-label="GitHub" title="GitHub" href="https://github.com/jonathanfalcon">
+            <a class="text-gray-600 hover:text-primary-700 dark:hover:text-primary-400 dark:text-gray-300 inline-flex items-center duration-200 transition" aria-label="GitHub" title="GitHub" href="https://github.com/jonathanfalcon">
               <Icon class="lg:w-20 lg:h-20 md:w-16 md:h-16 w-12 h-12" name="simple-icons:github"/>
   
             </a>
           </li>
           <li>
-            <a class="text-gray-600 hover:text-primary-700 dark:hover:text-primary-400 dark:text-gray-300 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 inline-flex items-center duration-200 transition" aria-label="Tableau Public" title="Tableau Public" href="https://public.tableau.com/app/profile/falcon">
+            <a class="text-gray-600 hover:text-primary-700 dark:hover:text-primary-400 dark:text-gray-300 inline-flex items-center duration-200 transition" aria-label="Tableau Public" title="Tableau Public" href="https://public.tableau.com/app/profile/falcon">
               <Icon class="lg:w-20 lg:h-20 md:w-16 md:h-16 w-12 h-12" name="simple-icons:tableau"/>
 
             </a>
           </li>
           <li>
-            <a class="text-gray-600 hover:text-primary-700 dark:hover:text-primary-400 dark:text-gray-300 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 inline-flex items-center duration-200 transition" aria-label="Unsplash" title="Unsplash" href="https://unsplash.com/@jonathanfalcon">
+            <a class="text-gray-600 hover:text-primary-700 dark:hover:text-primary-400 dark:text-gray-300 inline-flex items-center duration-200 transition" aria-label="Unsplash" title="Unsplash" href="https://unsplash.com/@jonathanfalcon">
               <Icon class="lg:w-20 lg:h-20 md:w-16 md:h-16 w-12 h-12" name="simple-icons:unsplash"/>
   
             </a>
@@ -114,20 +114,20 @@ const {
           <div class="flex flex-wrap -mx-3">
               <div class="w-full md:w-1/2 px-3 md:mb-0 mb-4">
                 <label for="firstName" class="block mb-2 font-bold md:text-2xl text-xl text-slate dark:text-white">First Name</label>
-                <input type="text" name="firstName" id="firstName" class="block p-2.5 w-full text-lg bg-gray-50 rounded-xl border-gray-300 shadow-sm focus:outline-none focus:border-slate dark:bg-slate-700 dark:border-slate-500 dark:placeholder-gray-200 dark:text-white dark:focus:border-slate-100 border-4" placeholder="First" required>
+                <input type="text" name="firstName" id="firstName" class="block p-2.5 w-full text-lg bg-gray-50 rounded-xl border-gray-300 shadow-sm dark:bg-slate-700 dark:border-slate-500 dark:placeholder-gray-200 dark:text-white border-4" placeholder="First" required>
               </div>
               <div class="w-full md:w-1/2 px-3">
                 <label for="lastName" class="block mb-2 font-bold md:text-2xl text-xl text-slate dark:text-white">Last Name</label>
-                <input type="text" name="lastName" id="lastName" class="block p-2.5 w-full text-lg bg-gray-50 rounded-xl border-gray-300 shadow-sm focus:outline-none focus:border-slate dark:bg-slate-700 dark:border-slate-500 dark:placeholder-gray-200 dark:text-white dark:focus:border-slate-100 border-4" placeholder="Last" required>
+                <input type="text" name="lastName" id="lastName" class="block p-2.5 w-full text-lg bg-gray-50 rounded-xl border-gray-300 shadow-sm dark:bg-slate-700 dark:border-slate-500 dark:placeholder-gray-200 dark:text-white border-4" placeholder="Last" required>
               </div>
           </div>
           <div>
             <label for="email" class="block mb-2 font-bold md:text-2xl text-xl text-slate dark:text-white">Email</label>
-            <input type="email" name="email" id="email" class="shadow-sm bg-gray-50 border-gray-300 text-lg rounded-xl focus:outline-none focus:border-slate block w-full p-2.5 dark:bg-slate-700 dark:border-slate-500 dark:placeholder-gray-200 dark:text-white dark:focus:border-slate-100 border-4" placeholder="name@domain.com" required>
+            <input type="email" name="email" id="email" class="shadow-sm bg-gray-50 border-gray-300 text-lg rounded-xl block w-full p-2.5 dark:bg-slate-700 dark:border-slate-500 dark:placeholder-gray-200 dark:text-white border-4" placeholder="name@domain.com" required>
           </div>
           <div class="sm:col-span-2">
             <label for="message" class="block mb-2 font-bold md:text-2xl text-xl text-slate dark:text-white">Optional Message</label>
-            <textarea name="message" id="message" rows="4" class="block p-2.5 w-full text-lg bg-gray-50 rounded-xl shadow-sm border-gray-300 focus:outline-none focus:border-slate dark:bg-slate-700 dark:border-slate-500 dark:placeholder-gray-200 dark:text-white dark:focus:border-slate-100 border-4" placeholder="Leave a comment..."></textarea>
+            <textarea name="message" id="message" rows="4" class="block p-2.5 w-full text-lg bg-gray-50 rounded-xl shadow-sm border-gray-300 dark:bg-slate-700 dark:border-slate-500 dark:placeholder-gray-200 dark:text-white border-4" placeholder="Leave a comment..."></textarea>
           </div>
           <button type="submit" class="ml-auto flex btn btn-primary text-2xl">Send<Icon name="ph:paper-plane-right-bold" class="w-6 h-6 ml-3 -mr-1" /></button>
         </form>
