--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -51,7 +51,7 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
             {socialLinks.map(({ ariaLabel, href, text, icon }) => (
               <li>
                 <a
-                  class="hover:text-primary-400 text-slate-400 hover:bg-slate-700 focus:outline-none focus:ring-4 focus:ring-slate-700 rounded-lg text-sm p-2.5 inline-flex items-center duration-200 transition"
+                  class="hover:text-primary-400 text-slate-400 hover:bg-slate-700 rounded-lg text-sm p-2.5 inline-flex items-center duration-200 transition"
                   aria-label={ariaLabel}
                   title={ariaLabel}
                   href={href}
