--- a/src/components/widgets/Hero3.astro
+++ b/src/components/widgets/Hero3.astro
@@ -71,21 +71,21 @@ const {
         }
         <div class="mx-auto lg:max-w-none">
           {subtitle && <p class="text-gray-800 mb-6 dark:text-slate-200 xl:leading-9 text-xl md:text-2xl xl:text-2.5xl" set:html={subtitle} />}
-          <div class="m-auto flex flex-nowrap justify-center gap-4 lg:justify-start lg:m-0 lg:max-w-7xl">
+          <div class="m-auto flex flex-nowrap justify-evenly gap-4 lg:justify-start lg:m-0 lg:max-w-7xl">
             {
               callToAction && (
                 <div class="flex">
                   {typeof callToAction === 'string' ? (
                     <Fragment set:html={callToAction} />
                   ) : (
-                    <a class="btn btn-secondary md:text-2xl" href={callToAction?.href} rel="noopener">
+                    <a class="btn btn-secondary md:text-2xl text-lg" href={callToAction?.href} rel="noopener">
                       {callToAction?.icon && (
                         <>
                           {''}
                         </>
                       )}
                       {callToAction?.text}
-                      <Icon name={callToAction.icon} class="w-7 h-5 ml-1.5 -mr-1" />
+                      <Icon name={callToAction.icon} class="w-7 h-5 ml-2" />
                     </a>
                   )}
                 </div>
@@ -97,14 +97,14 @@ const {
                   {typeof callToAction2 === 'string' ? (
                     <Fragment set:html={callToAction2} />
                   ) : (
-                    <a class="btn md:text-2xl" href={callToAction2?.href}>
+                    <a class="btn md:text-2xl text-lg" href={callToAction2?.href}>
                       {callToAction2?.icon && (
                         <>
                           {''}
                         </>
                       )}
                       {callToAction2.text}
-                      <Icon name={callToAction2.icon} class="w-5 h-5 ml-1.5 -mr-1" />
+                      <Icon name={callToAction2.icon} class="w-5 h-5 ml-2" />
                     </a>
                   )}
                 </div>
