--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ const meta = {
       icon: 'ph:arrow-down-bold'
     }}
     image={{
-      src: 'src/assets/images/profile.jpg',
+      src: '~/assets/images/profile.jpg',
       alt: 'Jonathan Falcon smiling and not looking directly at camera. Backdrop is of Texas State University'
     }}
     subtitle="As a marketing analyst, I leverage my multidisciplinary background to give you the most holistic understanding of your customers."
@@ -71,15 +71,5 @@ const meta = {
     ]}
   />
 
-  <HighlightedPosts
-    title="Check out some of my work"
-    postIds={[
-      'projects/2022-mccombs-marketing-challenge.mdx',
-      'projects/cleaning-the-iowa-liquor-sales-dataset.mdx',
-    ]}
-    allPostsText="View more"
-    background = "bg-white dark:bg-slate"
-  />
-  
   
 </Layout>
