--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -100,7 +100,7 @@ const skillsList = [
     name = "Jonathan Falcon"
     title = "Fencer, songwriter, photographer, marketer"
     image={{
-      src: '/src/assets/images/profile.jpg',
+      src: '~/assets/images/profile.jpg',
       alt: 'Jonathan Falcon smiling and not looking directly at camera. Backdrop is of Texas State University',
     }}
     aboutText = "Curiosity drives me; consumer behavior excites me. I will help you understand who your customers are and why they do what they do, so you can better tailor your products/services to exceed expectations."
