Removed format attribute, as it saved a trivial amount of space when set

--- a/src/components/widgets/Hero3.astro
+++ b/src/components/widgets/Hero3.astro
@@ -54,7 +54,7 @@ const {src} = await findImage(image.src)
                   loading="eager"
                   width={600}
                   height={900}
-                  format="webp"
+                  formats={['webp']}
                   style={await blurHashImage(src)}
                 />
               )}
