Added back accidentally removed HighlightedPosts

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -71,5 +71,14 @@ const meta = {
     ]}
   />
 
+  <HighlightedPosts
+    title="Check out some of my work"
+    postIds={[
+      'projects/2022-mccombs-marketing-challenge.mdx',
+      'projects/cleaning-the-iowa-liquor-sales-dataset.mdx',
+    ]}
+    allPostsText="View more"
+    background = "bg-white dark:bg-slate"
+  />
   
 </Layout>
