--- a/src/components/widgets/Hero3.astro
+++ b/src/components/widgets/Hero3.astro
@@ -36,7 +36,7 @@ const {src} = await findImage(image.src)
 
 <section class="relative dark:bg-resume-dark bg-resume lg:items-center lg:grid lg:min-h-small-screen">
   <div class="relative max-w-[88rem] mx-auto px-4 sm:px-6">
-    <div class="lg:flex lg:flex-row-reverse lg:items-center lg:gap-8 py-12">
+    <div class="lg:flex lg:flex-row-reverse lg:items-center lg:gap-8 md:pt-10 pt-4 pb-12">
       <div class="basis-2/5">
         {
           image && (
@@ -73,14 +73,14 @@ const {src} = await findImage(image.src)
         }
         <div class="mx-auto lg:max-w-none">
           {subtitle && <p class="text-gray-800 mb-6 dark:text-slate-200 xl:leading-9 text-xl md:text-2xl xl:text-2.5xl" set:html={subtitle} />}
-          <div class="m-auto flex flex-nowrap justify-evenly gap-4 lg:justify-start lg:m-0 lg:max-w-7xl">
+          <div class="m-auto flex sm:flex-row flex-col justify-evenly gap-4 lg:justify-start lg:m-0 lg:max-w-7xl">
             {
               callToAction && (
                 <div class="flex">
                   {typeof callToAction === 'string' ? (
                     <Fragment set:html={callToAction} />
                   ) : (
-                    <a class="btn btn-secondary md:text-2xl text-lg" href={callToAction?.href} rel="noopener">
+                    <a class="btn btn-secondary md:text-2xl text-xl grow" href={callToAction?.href} rel="noopener">
                       {callToAction?.icon && (
                         <>
                           {''}
@@ -95,11 +95,11 @@ const {src} = await findImage(image.src)
             }
             {
               callToAction2 && (
-                <div class="flex ">
+                <div class="flex">
                   {typeof callToAction2 === 'string' ? (
                     <Fragment set:html={callToAction2} />
                   ) : (
-                    <a class="btn md:text-2xl text-lg" href={callToAction2?.href}>
+                    <a class="btn md:text-2xl text-xl grow" href={callToAction2?.href}>
                       {callToAction2?.icon && (
                         <>
                           {''}
